Enabled checking of subdomain and redirection to secure link. get_data now returns array with status and actual result set. Overrode Form_validation to automagically load validtion files from custom directory.

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,10 @@
 RewriteEngine On
+
+# Redirect all non-https links to https
+RewriteCond %{SERVER_PORT} !443
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond $1 !^(index\.php)
-RewriteRule ^(.+)$ index.php?$1 [PT,L,QSA]
+RewriteRule ^(.+)$ index.php?$1 [L]
